-
Bug
-
Resolution: Done
-
P2: Important
-
5.15
-
Ubuntu 20.04, Gnome
-
-
2b77e779ce43386d14bdd2d1109ee182bcd0d047 (qt/qtbase/dev) 12efdab6c70b24538d2ce4f679e74c42e98a9947 (qt/qtbase/6.2), 7b64eb71c (dev), 747a4de31 (6.5)
When settingÂ
Material.theme: Material.System
on Ubuntu 20.04 with Dark Mode enabled, qml does not seems to recognize that the system is in Dark Mode.
To reproduce:
ApplicationWindow {
width: 640
height: 480
visible: true
Material.theme: Material.System // set in qtquickcontrols2.conf
Label {
anchors.centerIn: parent
text: Material.theme === Material.Dark ? "Dark" : "Light"
}
}
- relates to
-
QTBUG-90504 Dark theme not respected by Fusion style
-
- Closed
-
-
QTBUG-83908 Material.System does not work on Windows 10 in Dark Mode
-
- Closed
-
-
QTBUG-94859 Provide a QPA API for detecting which system theme (light/dark/etc.) is in use
-
- Closed
-