QGtk3Theme: implement appearance function to detect dark themes

This allows Qt Quick Controls to detect if a dark theme is in use,
and if so, use a dark theme of the current style (if available).

Fixes: QTBUG-93955
Change-Id: I15fc8a2271acf9ba27232359056d5a681d4cffca
Reviewed-by: Dmitry Shachnev <mitya57@gmail.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 2b77e779ce43386d14bdd2d1109ee182bcd0d047)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>